fix: .screenplay container should use `overflow: auto` instead of `scroll

--- a/styles.css
+++ b/styles.css
@@ -66,7 +66,7 @@
 .screenplay:not(.is-phone) {
 	width: var(--max-width);
 	min-width: var(--max-width);
-	overflow: scroll;
+	overflow: auto;
 }
 
 .is-phone .screenplay {
